deployment/gcp/manifest/anthos/dual-tiered-ingress/tier-1-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: citrix-tier-1-ingress
  annotations:
   kubernetes.io/ingress.class: "citrix-tier-1"
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/secure-backend: '{"cpx-service":"True"}'
   ingress.citrix.com/frontend-ip: "<VIP-Citrix-ADC>"
spec:
  tls:
  - secretName: anthos-citrix
  rules:
  - host: anthos-citrix-ingress.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cpx-service
          servicePort: 443
---
